--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,197 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  /* font-family: 'Playfair Display', sans-serif; */
+  font-size: 18px;
+  background-color: #ffffff;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  padding: 20px; 
+  color: rgb(0, 0, 0);
+  border-radius: 3px; 
+  margin: 0 0 30px 0;
+  border-bottom: 1px solid #dad5d5;
+  border-top: 5px solid #f8cb38;
+  padding: .75rem 0;
+}
+
+.logo-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin:10px 20px ;
 }
 
-.App-link {
-  color: #61dafb;
+.logo{
+  width: 45px; 
+  height: auto; 
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.search-bar {
+  margin-bottom: 10px;
+  width: 80%; 
+  margin: 10px auto 20px auto;
+  
+}
+
+.search-bar input[type="text"] {
+  padding: 10px;
+  margin-right: 10px;
+  width: 70%;
+  border-radius: 20px;
+  position: relative;
+  left: 140px;
+}
+
+
+/* Game card styles */
+.game {
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+  padding: 10px;
+  margin-left: 40px;
+  width: calc(33.33% -20px); 
+  /* margin-right: 50px; */
+  float: left;
+  transition: box-shadow 0.3s ease;
+  text-align: center;
+}
+
+.game:hover,
+.game.active {
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5); 
+}
+
+.game:nth-child(3n) {
+  margin-right: 10px;
+}
+
+.game img {
+  width: 100%;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.game .game-title {
+  color: #000000;
+  padding: 5px 0;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+
+}
+
+.game a {
+  display: block;
+  text-decoration: none;
+  color: #333;
+}
+
+.game a:hover {
+  background-color: #f0f0f0;
+}
+
+/* Game page styles */
+
+.game-page {
+  width: 90%;
+  max-width: 1300px;
+  max-height: 400px;
+  margin: 40px auto;
+  border-radius: 7px;
+  /* border: solid 1px #c9c9c9; */
+  display: flex;
+}
+
+.game-img {
+ width: 50%;
+ border-radius: 5px;
+}
+
+.game-img img {
+  width: 100%;
+  height: 80%;
+  border-radius: 7px ;
+}
+
+.game-info {
+  width: 90%;
+  display: inline;
+  background-color: #ffffff;
+  padding: 0 0 0 30px;
+  /* border: solid 1px #c9c9c9; */
+}
+
+.game-text h1 {
+  font-size: 34px;
+  color: #474747;
+}
+
+.game-text h2 {
+  font-size: 13px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #d2d2d2;
+  letter-spacing: 0.2em;
+}
+
+.game-text p {
+  margin: 0;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  font-size: 15px;
+  color: #5a5656;
+  line-height: 1.3em;
+}
+.btn-box {
+  display: flex;
+  align-items: center;
+  margin-top: 7px;
+}
+
+.play-btn {
+  margin-right: 10px; /* Add spacing between the buttons */
+}
+
+.play-btn button {
+  width: 500px; /* Adjust width as needed */
+  height: 40px; /* Adjust height as needed */
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #000000;
+  background-color: #f5c423;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.play-btn button:hover {
+  background-color: #49464698;
+  color: #000000;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.wish {
+  /* border: solid 1px ;
+  border-radius: 100px; */
+}
+.wish img {
+  width: 30px;
+  height: auto;
+  margin-top: 5px;
+  transition: box-shadow 0.1s ease;
+  cursor: pointer;
+}
+.wish img:hover {
+  background-color: #ff0000d2;
+  color: #000000;
 }
